Fix z-index on content classification tab

--- a/src/css/wordlift-reloaded.css
+++ b/src/css/wordlift-reloaded.css
@@ -2711,7 +2711,6 @@ h1.wl-tab-lead-text {
           justify-content: center;
   width: 100%;
   margin-bottom: 8px;
-  z-index: 1;
 }
 .wl-tab-lead:last-of-type {
   margin-bottom: 0;
