--- a/src/less/wordlift-widget-be.less
+++ b/src/less/wordlift-widget-be.less
@@ -55,7 +55,8 @@ h1.wl-tab-lead-text {
   justify-content: center;
   width: 100%;
   margin-bottom: 8px;
-  z-index: 1;
+  // Disable z-index, this overlaps video modal.
+ // z-index: -1;
 
   &:last-of-type {
     margin-bottom: 0;
